--- a/EDA/Hugo EDA.ipynb
+++ b/EDA/Hugo EDA.ipynb
@@ -115,7 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +501,7 @@
        "[10 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +509,296 @@
    "source": [
     "import pandas as pd\n",
     "data1 = pd.read_csv(\"data/EDACC.AA._14-23.csv\")\n",
-    "data1"
+    "data1\n",
+    "# data2 = pd.read_csv(\"data/omophobia.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>CSSSA LEGAL?</th>\n",
+       "      <th>DATE OF DECRIM</th>\n",
+       "      <th>MAX PENALTY</th>\n",
+       "      <th>CONST.</th>\n",
+       "      <th>BROAD PROT.</th>\n",
+       "      <th>EMPLOY.</th>\n",
+       "      <th>HATE CRIME</th>\n",
+       "      <th>INCITEMENT</th>\n",
+       "      <th>BAN CONV. THERAPIES</th>\n",
+       "      <th>SAME SEX MARRIAGE</th>\n",
+       "      <th>CIVIL UNIONS</th>\n",
+       "      <th>JOINT ADOPTION</th>\n",
+       "      <th>SECOND PARENT ADOPTION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>-</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Benin</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NEVER CRIM</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Botswana</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Burkina Faso</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NEVER CRIM</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>Tokelau (NZ)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>Turks and Caicos (UK)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>US Virgin Islands (USA)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>Vatican City</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>1890</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Wallis and Futuna (FR)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NEVER CRIM</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>241 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     COUNTRY CSSSA LEGAL? DATE OF DECRIM MAX PENALTY CONST.  \\\n",
+       "0                    Algeria           NO              -           2     NO   \n",
+       "1                     Angola          YES           2021           -     NO   \n",
+       "2                      Benin          YES     NEVER CRIM           -     NO   \n",
+       "3                   Botswana          YES           2019           -     NO   \n",
+       "4               Burkina Faso          YES     NEVER CRIM           -     NO   \n",
+       "..                       ...          ...            ...         ...    ...   \n",
+       "236             Tokelau (NZ)          YES           2007           -    NaN   \n",
+       "237    Turks and Caicos (UK)          YES           2001           -    NaN   \n",
+       "238  US Virgin Islands (USA)          YES           1985           -    NaN   \n",
+       "239             Vatican City          YES           1890           -     NO   \n",
+       "240   Wallis and Futuna (FR)          YES     NEVER CRIM           -    NaN   \n",
+       "\n",
+       "    BROAD PROT. EMPLOY. HATE CRIME INCITEMENT BAN CONV. THERAPIES  \\\n",
+       "0            NO      NO         NO         NO                  NO   \n",
+       "1           YES     YES        YES        YES                  NO   \n",
+       "2            NO      NO         NO         NO                  NO   \n",
+       "3            NO     YES         NO         NO                  NO   \n",
+       "4            NO      NO         NO         NO                  NO   \n",
+       "..          ...     ...        ...        ...                 ...   \n",
+       "236          NO      NO         NO         NO                  NO   \n",
+       "237         YES     YES         NO         NO                  NO   \n",
+       "238          NO      NO        YES         NO                  NO   \n",
+       "239          NO      NO         NO         NO                  NO   \n",
+       "240         YES     YES        YES        YES                  NO   \n",
+       "\n",
+       "    SAME SEX MARRIAGE CIVIL UNIONS JOINT ADOPTION SECOND PARENT ADOPTION  \n",
+       "0                  NO           NO             NO                     NO  \n",
+       "1                  NO           NO             NO                     NO  \n",
+       "2                  NO           NO             NO                     NO  \n",
+       "3                  NO           NO             NO                     NO  \n",
+       "4                  NO           NO             NO                     NO  \n",
+       "..                ...          ...            ...                    ...  \n",
+       "236                NO           NO             NO                     NO  \n",
+       "237                NO           NO             NO                     NO  \n",
+       "238               YES           NO            YES                    YES  \n",
+       "239                NO           NO             NO                     NO  \n",
+       "240               YES          YES            YES                    YES  \n",
+       "\n",
+       "[241 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data4 = pd.read_csv(\"data/omophobia.csv\", delimiter = \";\", encoding='latin-1')\n",
+    "data4"
    ]
   }
  ],
@@ -512,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.0"
   },
   "orig_nbformat": 4
  },
