actualizacion info pre-estudio

--- a/EDA/Hugo EDA.ipynb
+++ b/EDA/Hugo EDA.ipynb
@@ -51,10 +51,10 @@
     "\n",
     "- Incremento de Delitos de Odio: Se hipotetiza que ha habido un aumento significativo en la cantidad de delitos de odio en España entre 2014 y 2023.\n",
     "\n",
-    "- Variabilidad por Comunidades Autónomas: Se plantea la hipótesis de que existen diferencias notables en la incidencia de delitos de odio entre comunidades autónomas.\n",
-    "- Identificación de Subgrupos Vulnerables: Se sugiere que dentro del colectivo LGTBIQ+, ciertos subgrupos (como personas trans, no binarias, bisexuales, asexuales) son más propensos a experimentar delitos de odio, lo que resalta la necesidad de un análisis detallado sobre las realidades y experiencias específicas de estos grupos.\n",
+    "- Variabilidad por Comunidades Autónomas: Se plantea la hipótesis de que existen diferencias notables en la incidencia de delitos de odio entre comunidades autónomas. Confirmar o desmentir los sesgos centralistas vs. sesgos provinciales.\n",
+    "- Identificación de Subgrupos Vulnerables: Se sugiere que dentro del colectivo LGTBIQ+, ciertos subgrupos (como personas trans, no binarias, bisexuales, asexuales) son más propensos a sufrir delitos de odio, lo que resalta la necesidad de un análisis detallado sobre las realidades y experiencias específicas de estos grupos.\n",
     "\n",
-    "- Impacto de la Legislación: Se plantea la hipótesis de que la implementación de políticas públicas y leyes contra la discriminación en ciertas comunidades autónomas está asociada con una disminución de los delitos de odio en esas áreas, sugiriendo que las medidas legislativas pueden ser efectivas en la reducción de la violencia."
+    "- Impacto de la Legislación: Se plantea la hipótesis de que la implementación de políticas públicas y leyes contra la discriminación en ciertas comunidades autónomas está asociada con una disminución de los delitos de odio en esas áreas, sugiriendo que las medidas legislativas pueden ser efectivas en la reducción de la violencia. También el análisis de los años en los que ha habido elecciones estatales y autonómicas con fuertes impactos."
    ]
   },
   {
@@ -76,12 +76,12 @@
    "metadata": {},
    "source": [
     "**PRIMER DATASET**\n",
-    "Para obtener información sobre los registros de agresiones racistas y LGTBIfóbicas.\n",
+    "Para obtener información sobre los registros de agresiones racistas y LGTBIfóbicas. Portal estadístico de criminalidad.\n",
     "- Hechos conocidos por causa delitos de odio por CC.AA. desde el 2014 hasta el 2024.\n",
     "\n",
     "\n",
     "**SEGUNDO DATASET**\n",
-    "Más detalle y variedd en clasificaicón de agresions LGTBIfóbicas.\n",
+    "Más detalle y variedad en clasificaicón de agresions LGTBIfóbicas.\n",
     "- Informe de incidentes de odio motivados por LGTBIfobia. Intención de conseguir un csv o scrappear los datos: Completar los datos con modalidades e identidades. (Varios años)\n",
     "(https://contraelodio.org/wp/informe-lgtbifobia-madrid/)\n",
     "\n",
