--- a/2-Data_analysis/3-Sources/Archivos/Practica/Ejercicio_descargas.ipynb
+++ b/2-Data_analysis/3-Sources/Archivos/Practica/Ejercicio_descargas.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "            print(archivo, \"movido a Documentos\")\n",
     "        \n",
     "        elif archivo.endswith(img_types):\n",
-    "            shutil.move(os.pa+th.join(path, archivo), r\"C:\\Users\\Alumno Prestamo\\Downloads\\Imágenes\")\n",
+    "            shutil.move(os.path.join(path, archivo), r\"C:\\Users\\Alumno Prestamo\\Downloads\\Imágenes\")\n",
     "            print(archivo, \"movido a Imágenes\")\n",
     "\n",
     "        elif archivo.endswith(software_types):\n",
