--- a/EDA/Hugo EDA.ipynb
+++ b/EDA/Hugo EDA.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "[10 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,6 +799,581 @@
    "source": [
     "data4 = pd.read_csv(\"data/omophobia.csv\", delimiter = \";\", encoding='latin-1')\n",
     "data4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CSVs redactados a mano:\n",
+    "1. Organización de agresiones por identidad\n",
+    "2. Organización de agresiones por sexualidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sexo/Id Sexual o Género</th>\n",
+       "      <th>Casos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hombre Cis</td>\n",
+       "      <td>128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hombre Trans</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mujer Cis</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mujer Trans</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Persona no binaria</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sexo/Id Sexual o Género  Casos\n",
+       "0              Hombre Cis    128\n",
+       "1            Hombre Trans      9\n",
+       "2               Mujer Cis     21\n",
+       "3             Mujer Trans     27\n",
+       "4      Persona no binaria      2\n",
+       "5                   Total    187\n",
+       "6             Desconocido     24"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sexo-id sexual/género</th>\n",
+       "      <th>Casos</th>\n",
+       "      <th>Porcentaje</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hombre Cis</td>\n",
+       "      <td>103</td>\n",
+       "      <td>67.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hombre Trans</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mujer Cis</td>\n",
+       "      <td>19</td>\n",
+       "      <td>12.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mujer Trans</td>\n",
+       "      <td>21</td>\n",
+       "      <td>13.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Persona no binaria</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>152</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sexo-id sexual/género  Casos  Porcentaje\n",
+       "0            Hombre Cis    103        67.7\n",
+       "1          Hombre Trans      5         3.3\n",
+       "2             Mujer Cis     19        12.5\n",
+       "3           Mujer Trans     21        13.8\n",
+       "4    Persona no binaria      4         2.6\n",
+       "5                 Total    152       100.0\n",
+       "6           Desconocido     21         0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sexo/Identidad</th>\n",
+       "      <th>Casos</th>\n",
+       "      <th>Porcentaje</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hombre Cis</td>\n",
+       "      <td>94</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hombre Trans</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mujer Cis</td>\n",
+       "      <td>40</td>\n",
+       "      <td>21.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mujer Trans</td>\n",
+       "      <td>35</td>\n",
+       "      <td>18.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>No Binaria</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Intersex</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>188</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sexo/Identidad  Casos  Porcentaje\n",
+       "0     Hombre Cis     94        50.0\n",
+       "1   Hombre Trans      9         4.8\n",
+       "2      Mujer Cis     40        21.3\n",
+       "3    Mujer Trans     35        18.6\n",
+       "4     No Binaria      9         4.8\n",
+       "5       Intersex      1         0.5\n",
+       "6          Total    188       100.0\n",
+       "7    Desconocido     50         0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Orientación</th>\n",
+       "      <th>Casos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gay</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lesbiana</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bisexual</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Heterosexual</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Otro</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Orientación  Casos\n",
+       "0           Gay    125\n",
+       "1      Lesbiana     19\n",
+       "2      Bisexual      7\n",
+       "3  Heterosexual     12\n",
+       "4          Otro      1\n",
+       "5         Total    164"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Orientación</th>\n",
+       "      <th>Casos</th>\n",
+       "      <th>Porcentaje</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gay</td>\n",
+       "      <td>112</td>\n",
+       "      <td>78.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lesbiana</td>\n",
+       "      <td>16</td>\n",
+       "      <td>11.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bisexual</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Heterosexual</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>143</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Orientación  Casos  Porcentaje\n",
+       "0           Gay    112        78.3\n",
+       "1      Lesbiana     16        11.1\n",
+       "2      Bisexual      3         2.1\n",
+       "3  Heterosexual     12         8.4\n",
+       "4         Total    143       100.0\n",
+       "5   Desconocido     42         0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Orientación Sexual</th>\n",
+       "      <th>Casos</th>\n",
+       "      <th>Porcentaje</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gay</td>\n",
+       "      <td>83</td>\n",
+       "      <td>66.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lesbiana</td>\n",
+       "      <td>23</td>\n",
+       "      <td>18.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bisexual</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Heterosexual</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>125</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>113</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Orientación Sexual  Casos  Porcentaje\n",
+       "0                Gay     83        66.4\n",
+       "1           Lesbiana     23        18.4\n",
+       "2           Bisexual     11         8.8\n",
+       "3       Heterosexual      8         6.4\n",
+       "4              Total    125       100.0\n",
+       "5        Desconocido    113         0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data5 = pd.read_csv(\"data/identidad2021.csv\")\n",
+    "data6 = pd.read_csv(\"data/identidad2022.csv\")\n",
+    "data7 = pd.read_csv(\"data/identidad2023.csv\")\n",
+    "data8 = pd.read_csv(\"data/orientacion2021.csv\")\n",
+    "data9 = pd.read_csv(\"data/orientacion2022.csv\")\n",
+    "data10 = pd.read_csv(\"data/orientacion2023.csv\")\n",
+    "display(data5, data6, data7, data8, data9, data10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PLANIFICACIÓN DEL ANÁLISIS Y ESTRUCTURA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Empezamos definiendo la estructura del análisis, la cual será, teniendo en cuenta las hipótesis a demostrar:\n",
+    "1. Introducción:\n",
+    "¿que es crimen de odio, no toxdos estan registrados pq depedne de denuncias.\n",
+    "\n",
+    "2. Evolución por años:\n",
+    "Comparación con gráficas de la evolución que han tenido las agresiones, comentar cuantas agresiones estatales ha habido por año, indicando cual ha tenido menos, cual más, cual es la media y cual es la tendencia.\n",
+    "\n",
+    "3. Evolución geográfica: Mapas de calor por año para ver la evolución por comunidades autónomas. Tb gráfica con eje X temporal y eje Y comunidades, para ver las evoluciones de cada una. Gráficas tipo quesito o asi para ver. Ranking de las más peligrosas y las menos. Cuales estan por encima de la media y cuales no.\n",
+    "\n",
+    "4. Grupos más vulnerables: Comentar la evolución de las agresiones a x identidades, para intentar ver cual es el colectivo más vulnerable y si alguno ha tenido una tendencia a la baja\n",
+    "\n",
+    "5. Impacto posible de la legislacion en años concreto.\n",
+    "\n",
+    "6. Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ¿Qué datos concretos necesitamos extraer y analizar para cada putno?¿Y qué representaciones gráficas proponemos?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Total estatal 2014-2023. max del total, min del total, media agresiones, tendencia alza o baja?<br>\n",
+    "Gráficos: grafica total años evolucion. \n",
+    "\n",
+    "3.  Por año: max cada comunidad. min cada comunidad. media de cada comunidad. cuales en 2023 estan por encima de la media. tendencia comparativa de todas<br>\n",
+    "Gráficos: mapa de calor por cada año. grafica evolucion años/agresiones/cc.aa.(varias lineas en la grafica). quesito con el total hasta 2023 por cc.aa. rankings comparativos 2014 vs. 2023: top 3, min 3 y mediana y cuantas por enmcima o debajo de la media(desviacion tipica).\n",
+    "\n",
+    "4.  Agresiones por colectivo a lo largo de los años, tendencias de cada colectivo.<br>\n",
+    "Gráficos: otra grafica años/agresiones/colectivos (varias lineas x cada colectivo). ranking 201Xvs2024 de min, max, mediana, desviacion tipica\n",
+    "\n",
+    "5. Observar gráficas de cada año con impacto legislativo del total estatal y de colectivos.\n",
+    "\n",
+    "6. (Conclusiones):<br>\n",
+    "han aumentado o disminuido en total estatal las agresiones?<br>\n",
+    "en que cc.aa. hay una tendencia a la baja y en cuales a la alza?<br>\n",
+    "nucleos metropolitanos vs. zonas despobladas¿donde hay mas? (habrá que relacionar la cantidad de habitantes?)<br>\n",
+    "que colectivos han sufrido más agresiones (tener en cuenta la visibilidad) cuales han disminuido su probabilidad de sufrir agresiones y cuales han aumentado?<br>\n",
+    "impactos de la legislacion?"
    ]
   }
  ],
