--- a/2-Data_analysis/4-Visualización copy/2-Seaborn/Ejercicios/ejercicios_Seaborn.ipynb
+++ b/2-Data_analysis/4-Visualización copy/2-Seaborn/Ejercicios/ejercicios_Seaborn.ipynb
@@ -1294,7 +1294,7 @@
    ],
    "source": [
     "plt.figure()\n",
-    "sns.violinplot(pokemon_filtrado, x = \"Type 1\", y = \"Attack\", palette= colores, inner= None);\n",
+    "sns.violinplot(pokemon_filtrado, x = \"Type 1\", y = \"Attack\", palette= colores, inner= point);\n",
     "sns.swarmplot(pokemon_filtrado, x = \"Type 1\", y = \"Attack\", color = \"white\");"
    ]
   },
