--- a/SQL/Teoria/SQL_Python/SQL_Python.ipynb
+++ b/SQL/Teoria/SQL_Python/SQL_Python.ipynb
@@ -76,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Repositorios\\\\ONLINE_DS_THEBRIDE_HUGOMM\\\\SQL\\\\Teoria\\\\SQL_Python'"
+       "'d:\\\\Bootcamps_DS\\\\24_09_Bootcamp_DS\\\\2409_sql_thebridge\\\\Teoria\\\\SQL_Python'"
       ]
      },
      "execution_count": 2,
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Repositorios\\\\ONLINE_DS_THEBRIDE_HUGOMM\\\\SQL\\\\Teoria\\\\SQL_Python'"
+       "'d:\\\\Bootcamps_DS\\\\24_09_Bootcamp_DS\\\\2409_sql_thebridge\\\\Teoria\\\\SQL_Python'"
       ]
      },
      "execution_count": 10,
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4150,7 +4150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4162,36 +4162,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x23b312cf340>"
+       "<sqlite3.Cursor at 0x1812f074040>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# query = '''\n",
-    "# CREATE TABLE Persons (\n",
-    "#     PersonID int,\n",
-    "#     LastName varchar(255),\n",
-    "#     FirstName varchar(255),\n",
-    "#     Address varchar(255),\n",
-    "#     City varchar(255)\n",
-    "# );\n",
-    "# '''\n",
-    "# crsr.execute(query)"
+    "query = '''\n",
+    "CREATE TABLE Persons (\n",
+    "    PersonID int,\n",
+    "    LastName varchar(255),\n",
+    "    FirstName varchar(255),\n",
+    "    Address varchar(255),\n",
+    "    City varchar(255)\n",
+    ");\n",
+    "'''\n",
+    "crsr.execute(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4200,50 +4200,50 @@
        "[(1, 'N', 'M', 'Recoletos', 'Madrid')]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# query = '''\n",
-    "# SELECT * FROM Persons\n",
-    "# '''\n",
-    "# crsr.execute(query).fetchall()"
+    "query = '''\n",
+    "SELECT * FROM Persons\n",
+    "'''\n",
+    "crsr.execute(query).fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x23b31253340>"
+       "<sqlite3.Cursor at 0x1812f18b4c0>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# query = '''\n",
-    "# INSERT INTO Persons (PersonID, LastName, FirstName, Address, City)\n",
-    "# VALUES (1, \"N\", \"M\", \"Recoletos\", \"Madrid\");\n",
-    "# '''\n",
-    "# crsr.execute(query)"
+    "query = '''\n",
+    "INSERT INTO Persons (PersonID, LastName, FirstName, Address, City)\n",
+    "VALUES (1, \"N\", \"M\", \"Recoletos\", \"Madrid\");\n",
+    "'''\n",
+    "crsr.execute(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connection.commit()\n",
-    "# connection.close()"
+    "connection.commit()\n",
+    "connection.close()"
    ]
   },
   {
@@ -4393,7 +4393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
