--- a/3-Machine_Learning/Kaggle/kaggle competition.ipynb
+++ b/3-Machine_Learning/Kaggle/kaggle competition.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1881,6 +1881,27 @@
    ],
    "source": [
     "pruebacsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pruebacsv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpruebacsv\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pruebacsv' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pruebacsv.columns()"
    ]
   },
   {
