--- a/3-Machine_Learning/1-Supervisado/5-Time_Series/ejercicios/1_ejercicio time series analysis.ipynb
+++ b/3-Machine_Learning/1-Supervisado/5-Time_Series/ejercicios/1_ejercicio time series analysis.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,10 +354,7 @@
     "from statsmodels.tsa.stattools import adfuller\n",
     "\n",
     "result = adfuller(df['furniture_price_adjusted'])\n",
-    "print(\"ADF Statistic:\", result[0])\n",
-    "print(\"p-value:\", result[1])\n",
-    "for key, value in result[4].items():\n",
-    "    print('Critical Value {}: {}'.format(key, value))"
+    "print(\"p-value:\", result[1])"
    ]
   },
   {
@@ -452,6 +449,24 @@
     "plt.xlabel(\"Fecha\")\n",
     "plt.ylabel(\"Valor (Simétrico)\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.tsa.seasonal import seasonal_decompose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_add = seasonal_decompose(df['furniture_price_adjusted'], model = 'additive')"
    ]
   },
   {
